--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "openai": "^5.10.1",
     "pixelmatch": "^7.1.0",
     "pngjs": "^7.0.0",
+    "resend": "^6.0.3",
     "sharp": "^0.34.3",
     "string-similarity": "^4.0.4"
   },
