--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.5.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "resend": "^6.0.3"
