--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ server/.env
 server/node_modules/@xenova/transformers/.cache/Xenova/clip-vit-base-patch32/onnx/model_quantized.onnx
 client/.env
 mobile/.env
+mobile/eas.json
+mobile/eas.json
